@@ -4,8 +4,7 @@ fixtures:
     augeasproviders_core: https://github.com/simp/augeasproviders_core
     augeasproviders_grub: https://github.com/simp/augeasproviders_grub
     compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup
+    crypto_policy: https://github.com/simp/pupmod-simp-crypto_policy
     simp_options: https://github.com/simp/pupmod-simp-simp_options
     simplib: https://github.com/simp/pupmod-simp-simplib
     stdlib: https://github.com/puppetlabs/puppetlabs-stdlib
-  symlinks:
-    fips: "#{source_dir}"
