@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -29,6 +29,14 @@
       "version_requirement": ">= 2.3.1 < 4.0.0"
     }
   ],
+  "simp": {
+    "optional_dependencies": [
+      {
+        "name": "simp/crypto_policy",
+        "version_requirement": ">= 0.1.0 < 2.0.0"
+      }
+    ]
+  },
   "operatingsystem_support": [
     {
       "operatingsystem": "CentOS",
