@@ -9,22 +9,16 @@ HOSTS:
   el6:
     roles:
       - default
-      - master
-      - client
     platform: el-6-x86_64
     box: centos/6
     hypervisor: <%= hypervisor %>
 
   el7:
-    roles:
-      - client
     platform: el-7-x86_64
     box: centos/7
     hypervisor: <%= hypervisor %>
 
   el8:
-    roles:
-      - client
     platform: el-8-x86_64
     box: centos/8
     hypervisor: <%= hypervisor %>
