@@ -1,3 +1,7 @@
+* Wed May 13 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.1-0
+- Ensure that EL8 updates trigger updating the global system crypto policy since
+  some subsystems now ignore the local configuration by default.
+
 * Tue Dec 10 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.0-0
 - Add EL8 support
 - Add REFERENCE.md
